Fix Vinyl Future ZIP export and stock merge